# porr

./: .gitignore  BruteForceMain.cpp  CMakeLists.txt  CombUtils.h  Configuration.h  KnapsackProblem.h  KnapsackProblemFactory.h  KnapsackProblemSolver.h  MPIHelper.h  MTKnapsackProblemSolver.h  OCLBruteForce.h  OCLHelper.h  READ.ME  README.md  SeqBruteForce.h  SeqDynamicSolver.h  Stopwatch.h  benchmark_brute.cpp  build.sh  main.cpp  porr.h  test_bruteforce.cpp  test_mpi.cpp  test_opencl.cpp  utils.h
conf/: KnapsackBruteSolver.cl
scripts/: run_mpi.sh
